[build-system]
requires = ["setuptools>=61.0","paho-mqtt>=2.0.0","requests~=2.31.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ha_mqtt_sensors"
version = "0.0.1"
authors = [
  { name="Chris Burrows", email="chris.burrows1965@gmail.com" },
]
description = "HA MQTT Sensors Mini-Project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
